Fix contact information Tablet view

--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -126,7 +126,7 @@
     
     }
 
-    @media (min-width: 600px) and (max-width: 1023px){
+    @media (min-width: 600px) and (max-width: 1024px){
         
         .contact{
             padding: 0 1rem;
@@ -175,44 +175,35 @@
                 }
             }
             &__informations{
-                display: flex;
-                flex-direction: column;
+                display: grid;
+                grid-template-columns: 33.33% 33.33% 33.33%;
                 padding: 40px 0px 0px;
-                width: 80%;
                 margin-left: auto;
                 margin-right: auto;
                 &--bottom{
-                    display: block;
+                    display: grid;
+                    grid-template-columns: 100%;
+                    grid-template-rows: max-content max-content max-content;
                     margin-left: auto;
                     margin-right: auto;
                     margin-bottom: 48px;
                     i{
                         font-size: 40px;
-                       
+                        grid-row: 1/2;  
+                        grid-column: 1/2;                     
                         margin: auto;
                         margin-bottom: 16px;
                     }
                     h1{
                         text-align: center;  
                         margin-bottom: 8px;
-                       
-                      
-                       
-                      
-    
-                    }
-                    .email{
-                        display: block;
-                        margin-bottom: 8px;
-                       text-align: center;
-                       
-                     
+                        grid-row: 2/3; 
+                        grid-column: 1/2;   
                     }
                     a{
-                        display: block;
-                        margin-right: auto;
-                        margin-left: auto;
-                       
+                        grid-row: 3/4; 
+                        grid-column: 1/2;   
+                        text-align: center; 
                     }
                    
                         
